# cequiq

./: CMakeLists.txt  LICENSE  README.md  gen_server_file.sh
include/: cequiq.h
src/: buffer.c  cequiq_entry.c  cequiq_ssl.c  fd_association.c  tcp_ssl.c
src/private_include/: buffer.h  cequiq_entry.h  cequiq_ssl.h  fd_association.h  internal.h  tcp_ssl.h
test/: CMakeLists.txt  test1.sh  test2.sh  test3.sh
test/test1/: CMakeLists.txt  README.md  client.c  server.c
test/test2/: CMakeLists.txt  README.md  client.c  server.c
test/test3/: CMakeLists.txt  README.md  client.c  server.c
